<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ SPDX-FileCopyrightText: © 2025 Gregory Higgins <greg.higgins@v12technology.com>
  ~ SPDX-License-Identifier: AGPL-3.0-only
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.telamin</groupId>

    <artifactId>mongoose-plugins</artifactId>
    <version>0.2.14-SNAPSHOT</version>
    <name>telamin :: mongoose-plugins</name>
    <packaging>pom</packaging>

    <description>
        A set of plugins for the telamin mongoose server
    </description>

    <url>https://github.com/gregv12/fluxtion-server-plugins</url>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <fluxtion.version>0.9.33</fluxtion.version>
        <fluxtion.generator.version>1.0.27</fluxtion.generator.version>
        <mongoose.version>1.0.10</mongoose.version>
        <log4j2.version>2.24.3</log4j2.version>
        <lombok.version>1.18.42</lombok.version>
        <jackson.version>2.18.2</jackson.version>
        <argLine>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <developers>
        <developer>
            <name>Greg Higgins</name>
            <email>greg.higgins@telamin.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/telaminai/mongoose-plugins.git</connection>
        <developerConnection>scm:git:https://github.com/telaminai/mongoose-plugins.git</developerConnection>
        <url>https://github.com/telaminai/mongoose-plugins/</url>
        <tag>v0.1.0</tag>
    </scm>


    <repositories>
        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>repsy-fluxtion-public</id>
            <name>DataFlow public repo</name>
            <url>https://repo.repsy.io/mvn/fluxtion/fluxtion-public</url>
        </repository>
        <repository>
            <id>repsy-fluxtion</id>
            <name>DataFlow private repo</name>
            <url>https://repo.repsy.io/mvn/fluxtion/fluxtion-private</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>repsy-fluxtion</id>
            <name>DataFlow private repo</name>
            <url>https://repo.repsy.io/mvn/fluxtion/fluxtion-private</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <modules>
        <module>service/svc-admin-rest</module>
        <module>service/svc-admin-telnet</module>
        <module>service/svc-admin-web</module>
        <module>service/svc-cache</module>
        <module>service/svc-jdbc</module>
        <module>service/svc-loader-yaml</module>
        <module>service/svc-loader-spring</module>
        <module>connector/connector-aeron</module>
        <module>connector/connector-chronicle</module>
        <module>connector/connector-file</module>
        <module>connector/connector-kafka</module>
        <module>connector/connector-multicast</module>
        <module>library/lib-jsonserialiser</module>
        <module>test-support/mongoose-test-support</module>
    </modules>

    <dependencies>
<!--        <dependency>-->
<!--            <groupId>com.fluxtion.dataflow</groupId>-->
<!--            <artifactId>dataflow-server</artifactId>-->
<!--            <version>${mongoose.version}</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>com.telamin</groupId>
            <artifactId>mongoose</artifactId>
            <version>${mongoose.version}</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>com.fluxtion.dataflow</groupId>-->
<!--            <artifactId>dataflow-imperative</artifactId>-->
<!--            <scope>provided</scope>-->
<!--            <version>${fluxtion.version}</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-jul</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
<!--            <plugin>-->
<!--                <groupId>com.fluxtion.dataflow</groupId>-->
<!--                <artifactId>dataflow-maven-plugin</artifactId>-->
<!--                <version>${dataflow.maven-plugin.version}</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <goals>-->
<!--                            <goal>scan</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <useReleaseProfile>false</useReleaseProfile>
                    <releaseProfiles>release</releaseProfiles>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
                        --illegal-access=permit
                        --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>repsy-fluxtion</id>
            <name>Fluxtion private maven repo on Repsy</name>
            <url>https://repo.repsy.io/mvn/fluxtion/fluxtion-private</url>
        </repository>
    </distributionManagement>
</project>